// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Citely Demo golden responses > eu-msb 的完整 ModuleResponse 匹配 golden 快照 1`] = `
{
  "checks": [
    {
      "basis": "missing_evidence",
      "id": "eu-psd2-payment-institution-authorisation",
      "reason": "缺少所需证据：eu_payment_institution_authorisation",
      "result": "HOLD",
      "source": "Directive (EU) 2015/2366 (PSD2)",
    },
    {
      "basis": "not_applicable",
      "id": "eu-emd2-emoney-authorisation",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "Directive 2009/110/EC (EMD2)",
    },
    {
      "basis": "missing_evidence",
      "id": "eu-amld-policies-controls",
      "reason": "缺少所需证据：eu_aml_policies_and_controls",
      "result": "HOLD",
      "source": "Directive (EU) 2015/849 (AMLD)",
    },
    {
      "basis": "not_applicable",
      "id": "eu-mica-casp-authorisation",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "Regulation (EU) 2023/1114 (MiCA)",
    },
    {
      "basis": "missing_evidence",
      "id": "eu-transfer-information-controls",
      "reason": "缺少所需证据：eu_transfer_information_controls",
      "result": "HOLD",
      "source": "Regulation (EU) 2023/1113",
    },
    {
      "basis": "manual_review",
      "id": "eu-amlr-2027-applicability",
      "reason": "规则无法确定性判定，需人工核实：AMLR 已生效但主体条款尚未适用，将自 2027-07-10 起适用；本项仅提示过渡准备并转人工，不把未来条款表述为当前违规",
      "result": "ESCALATE",
      "source": "Regulation (EU) 2024/1624 (AMLR)",
    },
    {
      "basis": "missing_evidence",
      "id": "eu-de-bafin-payment-emoney-authorisation",
      "reason": "缺少所需证据：bafin_payment_or_emoney_authorisation",
      "result": "HOLD",
      "source": "BaFin: Payment services licensing information",
    },
    {
      "basis": "not_applicable",
      "id": "eu-fr-acpr-payment-emoney-authorisation",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "ACPR: Payment institution authorisation",
    },
    {
      "basis": "not_applicable",
      "id": "eu-nl-dnb-payment-emoney-authorisation",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "DNB: Payment institutions public register",
    },
  ],
  "disclaimer": "本 Module 为基于公开法源整理的 Demo 版本，输出为检查项状态，不构成法律意见。",
  "engine_version": "1.0.0",
  "evidence_hash": "1830888a785947fa2910d1818838ca2f83599b5278bdb49b80b1e512bda63d3e",
  "hash_scheme_version": "2",
  "maintainer_wallet": "0x5555555555555555555555555555555555555555",
  "module": "eu-msb",
  "overall": "ESCALATE",
  "royalty_bps": 500,
  "settlement_constraints": {
    "blocked_check_ids": [
      "eu-psd2-payment-institution-authorisation",
      "eu-amld-policies-controls",
      "eu-transfer-information-controls",
      "eu-de-bafin-payment-emoney-authorisation",
    ],
    "deal_id": "citely-demo-10000-usdc",
    "escalated_check_ids": [
      "eu-amlr-2027-applicability",
    ],
    "evidence_hash": "1830888a785947fa2910d1818838ca2f83599b5278bdb49b80b1e512bda63d3e",
    "module": "eu-msb",
    "module_version": "2026.07.2",
    "valid_until": "2026-07-27T12:00:00.000Z",
  },
  "updated_at": "2026-07-24T21:52:58Z",
  "version": "2026.07.2",
}
`;

exports[`Citely Demo golden responses > sg-msb 的完整 ModuleResponse 匹配 golden 快照 1`] = `
{
  "checks": [
    {
      "basis": "missing_evidence",
      "id": "sg-psa-licence-class",
      "reason": "缺少所需证据：mas_major_payment_institution_licence",
      "result": "HOLD",
      "source": "Payment Services Act 2019, section 6",
    },
    {
      "basis": "missing_evidence",
      "id": "sg-mas-register-lookup",
      "reason": "缺少所需证据：mas_financial_institution_directory_entry",
      "result": "HOLD",
      "source": "MAS Financial Institutions Directory",
    },
    {
      "basis": "missing_evidence",
      "id": "sg-psn01-aml-program",
      "reason": "缺少所需证据：mas_psn01_aml_cft_program",
      "result": "HOLD",
      "source": "MAS Notice PSN01",
    },
    {
      "basis": "not_applicable",
      "id": "sg-psn02-dpt-aml-program",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "MAS Notice PSN02",
    },
    {
      "basis": "not_applicable",
      "id": "sg-dpt-scope",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "Payment Services (Amendment) Act 2021",
    },
  ],
  "disclaimer": "本 Module 为基于公开法源整理的 Demo 版本，输出为检查项状态，不构成法律意见。",
  "engine_version": "1.0.0",
  "evidence_hash": "0e58bb4cb990e6321963bfb09a8404f54cd0f5f3ab0a13e2264a79ecdae61d00",
  "hash_scheme_version": "2",
  "maintainer_wallet": "0x5555555555555555555555555555555555555555",
  "module": "sg-msb",
  "overall": "HOLD",
  "royalty_bps": 500,
  "settlement_constraints": {
    "blocked_check_ids": [
      "sg-psa-licence-class",
      "sg-mas-register-lookup",
      "sg-psn01-aml-program",
    ],
    "deal_id": "citely-demo-10000-usdc",
    "escalated_check_ids": [],
    "evidence_hash": "0e58bb4cb990e6321963bfb09a8404f54cd0f5f3ab0a13e2264a79ecdae61d00",
    "module": "sg-msb",
    "module_version": "2026.07.1",
    "valid_until": "2026-07-27T12:00:00.000Z",
  },
  "updated_at": "2026-07-24T00:00:00Z",
  "version": "2026.07.1",
}
`;

exports[`Citely Demo golden responses > uk-msb 的完整 ModuleResponse 匹配 golden 快照 1`] = `
{
  "checks": [
    {
      "basis": "missing_evidence",
      "id": "uk-fca-payment-institution-authorisation",
      "reason": "缺少所需证据：fca_payment_institution_authorisation_or_registration",
      "result": "HOLD",
      "source": "Payment Services Regulations 2017",
    },
    {
      "basis": "not_applicable",
      "id": "uk-fca-emoney-authorisation",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "Electronic Money Regulations 2011",
    },
    {
      "basis": "missing_evidence",
      "id": "uk-hmrc-aml-supervision",
      "reason": "缺少所需证据：hmrc_aml_registration_or_fca_supervision",
      "result": "HOLD",
      "source": "HMRC: Money laundering supervision for money service businesses",
    },
    {
      "basis": "missing_evidence",
      "id": "uk-mlr-policies-controls",
      "reason": "缺少所需证据：uk_aml_policies_and_controls",
      "result": "HOLD",
      "source": "Money Laundering Regulations 2017",
    },
    {
      "basis": "missing_evidence",
      "id": "uk-poca-sar-controls",
      "reason": "缺少所需证据：uk_sar_monitoring_and_reporting_controls",
      "result": "HOLD",
      "source": "Proceeds of Crime Act 2002",
    },
    {
      "basis": "not_applicable",
      "id": "uk-crypto-regulatory-perimeter",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "Financial Services and Markets Act 2000",
    },
  ],
  "disclaimer": "本 Module 为基于公开法源整理的 Demo 版本，输出为检查项状态，不构成法律意见。",
  "engine_version": "1.0.0",
  "evidence_hash": "8358d3e2e9abd808a8e117b3f62849bebaa9ec4632c2209aa52d2702bf249e2d",
  "hash_scheme_version": "2",
  "maintainer_wallet": "0x5555555555555555555555555555555555555555",
  "module": "uk-msb",
  "overall": "HOLD",
  "royalty_bps": 500,
  "settlement_constraints": {
    "blocked_check_ids": [
      "uk-fca-payment-institution-authorisation",
      "uk-hmrc-aml-supervision",
      "uk-mlr-policies-controls",
      "uk-poca-sar-controls",
    ],
    "deal_id": "citely-demo-10000-usdc",
    "escalated_check_ids": [],
    "evidence_hash": "8358d3e2e9abd808a8e117b3f62849bebaa9ec4632c2209aa52d2702bf249e2d",
    "module": "uk-msb",
    "module_version": "2026.07.1",
    "valid_until": "2026-07-27T12:00:00.000Z",
  },
  "updated_at": "2026-07-24T00:00:00Z",
  "version": "2026.07.1",
}
`;

exports[`Citely Demo golden responses > us-msb 的完整 ModuleResponse 匹配 golden 快照 1`] = `
{
  "checks": [
    {
      "basis": "missing_evidence",
      "id": "us-fincen-registration-money-transmission",
      "reason": "缺少所需证据：fincen_msb_registration",
      "result": "HOLD",
      "source": "31 CFR § 1022.380",
    },
    {
      "basis": "not_applicable",
      "id": "us-fincen-registration-threshold-activities",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "31 CFR § 1010.100(ff)",
    },
    {
      "basis": "missing_evidence",
      "id": "us-bsa-aml-program",
      "reason": "缺少所需证据：bsa_aml_program",
      "result": "HOLD",
      "source": "31 CFR § 1022.210",
    },
    {
      "basis": "missing_evidence",
      "id": "us-sar-controls",
      "reason": "缺少所需证据：sar_monitoring_and_filing_controls",
      "result": "HOLD",
      "source": "31 CFR § 1022.320",
    },
    {
      "basis": "missing_evidence",
      "id": "us-ny-money-transmitter-license",
      "reason": "缺少所需证据：ny_money_transmitter_license",
      "result": "HOLD",
      "source": "NY Banking Law Article 13-B",
    },
    {
      "basis": "not_applicable",
      "id": "us-ny-bitlicense",
      "reason": "规则条件未触发",
      "result": "NOT_APPLICABLE",
      "source": "23 NYCRR Part 200",
    },
  ],
  "disclaimer": "本 Module 为基于公开法源整理的 Demo 版本，输出为检查项状态，不构成法律意见。",
  "engine_version": "1.0.0",
  "evidence_hash": "44bf07506c3ba782b93d8208757737aee4894c0227a47865ca1d34e7b2aa45e4",
  "hash_scheme_version": "2",
  "maintainer_wallet": "0x5555555555555555555555555555555555555555",
  "module": "us-msb",
  "overall": "HOLD",
  "royalty_bps": 500,
  "settlement_constraints": {
    "blocked_check_ids": [
      "us-fincen-registration-money-transmission",
      "us-bsa-aml-program",
      "us-sar-controls",
      "us-ny-money-transmitter-license",
    ],
    "deal_id": "citely-demo-10000-usdc",
    "escalated_check_ids": [],
    "evidence_hash": "44bf07506c3ba782b93d8208757737aee4894c0227a47865ca1d34e7b2aa45e4",
    "module": "us-msb",
    "module_version": "2026.07.1",
    "valid_until": "2026-07-27T12:00:00.000Z",
  },
  "updated_at": "2026-07-24T00:00:00Z",
  "version": "2026.07.1",
}
`;
